<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pellcorp WebView</string>

    <string name="reload_short_label">Reload</string>

    <string name="settings_short_label">Settings</string>
    <string name="settings_label">Pellcorp WebView Settings</string>

    <string name="pref_pin_title">Pin</string>
    <string name="pref_pin_summary">Specify a pin to change preferences</string>
    <string name="pref_pin">webview_pin</string>

    <string name="pref_url_title">Url</string>
    <string name="pref_url_summary">Specify a url to load</string>
    <string name="pref_url">webview_url</string>

    <string name="pref_scrolling_title">Scolling</string>
    <string name="pref_scrolling_summary">Enable scrolling</string>
    <string name="pref_scrolling">webview_scrolling</string>

    <string name="pref_external_links_title">External Links</string>
    <string name="pref_external_links_summary">Links open in browser</string>
    <string name="pref_external_links">webview_external_links</string>
</resources>