<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
    android:orderingFromXml="true">
    <PreferenceCategory android:title="@string/settings_label">
        <EditTextPreference
            android:defaultValue=""
            android:key="@string/pref_pin"
            android:inputType="numberPassword"
            android:summary="@string/pref_pin_summary"
            android:title="@string/pref_pin_title"
            android:maxLength="4" />

         <EditTextPreference
            android:defaultValue="https://github.com/pellcorp/"
            android:key="@string/pref_url"
            android:summary="@string/pref_url_summary"
            android:title="@string/pref_url_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_scrolling"
            android:summary="@string/pref_scrolling_summary"
            android:title="@string/pref_scrolling_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_external_links"
            android:summary="@string/pref_external_links_summary"
            android:title="@string/pref_external_links_title" />
    </PreferenceCategory>
</PreferenceScreen>
